--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,29 @@
         <title>Book ReadList</title>
     </head>
     <body>
-        <h1>Hello</h1>     
+        <div class="container">
+            <header>
+                <h1>Online BookList</h1>
+            </header>
+            <main>
+
+            </main>
+            <section>
+                <h2>Recommend a Book</h2>
+                <div class="for-input-are">
+                    <input type="text" placeholder="Name of Book">
+                <input type="text" placeholder="Name of Author">
+                </div>
+                <div class="for-details">
+                    <label for="Book-details">Tell Something</label>
+                    <textarea name="text-area" id="Book-details" cols="30" rows="10"></textarea>
+                </div>
+                <div class="for-button">
+                    <button>Add Book</button>
+                    <button>Clear</button>
+                </div>
+
+            </section>
+        </div>     
     </body>
 </html>
