--- a/Index.html
+++ b/Index.html
@@ -13,23 +13,24 @@
                 <h1>Online BookList</h1>
             </header>
             <main>
-
+                <h2>Book List Added</h2>
+                <div class="Book-Container">
+                </div>
             </main>
             <section>
                 <h2>Recommend a Book</h2>
                 <div class="for-input-are">
-                    <input type="text" placeholder="Name of Book">
-                <input type="text" placeholder="Name of Author">
+                    <input id="bookname" type="text" placeholder="Name of Book">
+                    <input id="authorname" type="text" placeholder="Name of Author">
                 </div>
                 <div class="for-details">
                     <label for="Book-details">Tell Something</label>
                     <textarea name="text-area" id="Book-details" cols="30" rows="10"></textarea>
                 </div>
                 <div class="for-button">
-                    <button>Add Book</button>
-                    <button>Clear</button>
+                    <button id="add-btn">Add Book</button>
+                    <button id="clear-btn">Clear</button>
                 </div>
-
             </section>
         </div>     
     </body>
