Modified the structure of the main element of Library Project

--- a/Index.html
+++ b/Index.html
@@ -15,6 +15,12 @@
             <main>
                 <h2>Book List Added</h2>
                 <div class="Book-Container">
+                    <!-- <div class="card-holder">
+                        <h3>Bleach</h3>
+                        <p>author: Tite Kubo</p>
+                        <p>Sypnosis: A boy who became Ghost shinigami</p>
+                        <button>Delete</button>
+                    </div> -->
                 </div>
             </main>
             <section>
