Adjusting the structure of HTML main tag to to fit the card container when adding book

--- a/Index.html
+++ b/Index.html
@@ -29,13 +29,18 @@
                     <input id="bookname" type="text" placeholder="Name of Book">
                     <input id="authorname" type="text" placeholder="Name of Author">
                 </div>
+                <div class="validation">
+                    <p>
+                        Please Enter Required field!!!
+                    </p>
+                    <button id="validation-exit">Exit</button>
+                </div>
                 <div class="for-details">
                     <label for="Book-details">Tell Something</label>
                     <textarea name="text-area" id="Book-details" cols="30" rows="10"></textarea>
                 </div>
                 <div class="for-button">
                     <button id="add-btn">Add Book</button>
-                    <button id="clear-btn">Clear</button>
                 </div>
             </section>
         </div>     
