Modified the structure of main tag and add the view sypnosis button

--- a/Index.html
+++ b/Index.html
@@ -13,12 +13,20 @@
             <header>
                 <h1>Online BookList</h1>
             </header>
-            <main>
+            <main id="main-tag" class="change-main">
                 <button id="show-section">Add Book <i class="fa-solid fa-plus"></i></Button> 
-                <div class="Book-Container"></div>
-                
+                <div class="Book-Container">
+                    <!-- <div class="card-holder">
+                        <h3>One Piece</h3>
+                        <p>Author: Eichiro Oda</p>
+                        <div class="main-button">
+                            <button >View Sypnosis</button>
+                            <button>Delete</button>
+                        </div>
+                    </div> -->
+                </div>
             </main> 
-            <section>
+            <section id="for-section">
                 <h2>Recommend a Book</h2>
                 <div class="for-input-are">
                     <input id="bookname" type="text" placeholder="Name of Book">
