testing functionality with fixed value

--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,9 @@
                     <!-- <div class="card-holder">
                         <h3>One Piece</h3>
                         <p>Author: Eichiro Oda</p>
+                        <div class="forsypnosisonly">
+                            <p>A boy Who want to become Pirate king</p>
+                        </div>
                         <div class="main-button">
                             <button >View Sypnosis</button>
                             <button>Delete</button>
