--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="index.css">
         <script src="https://kit.fontawesome.com/da29e3cc4f.js" crossorigin="anonymous"></script>
-        <script src="script.js" defer></script>
+        <script src="script2.js" defer></script>
         <title>Book ReadList</title>
     </head>
     <body>
