Add another div to center the section tag

--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="index.css">
         <script src="https://kit.fontawesome.com/da29e3cc4f.js" crossorigin="anonymous"></script>
-        <script src="script2.js" defer></script>
+        <script src="script.js" defer></script>
         <title>Book ReadList</title>
     </head>
     <body>
@@ -29,27 +29,30 @@
                     </div> -->
                 </div>
             </main> 
-            <section id="for-section">
-                <h2>Recommend a Book</h2>
-                <div class="for-input-are">
-                    <input id="bookname" type="text" placeholder="Name of Book">
-                    <input id="authorname" type="text" placeholder="Name of Author">
-                </div>
-                <div class="validation">
-                    <p>
+            <div class="reSection">
+                <section id="for-section">
+                    <h2>Recommend a Book</h2>
+                    <div class="for-input-are">
+                        <input id="bookname" type="text" placeholder="Name of Book">
+                        <input id="authorname" type="text" placeholder="Name of Author">
+                    </div>
+                    <div class="validation">
+                        <p>
                         Please Enter Required field!!!
-                    </p>
+                        </p>
                     <button id="validation-exit">Exit</button>
-                </div>
-                <div class="for-details">
-                    <label for="Book-details">Tell Something</label>
-                    <textarea name="text-area" id="Book-details" cols="30" rows="10"></textarea>
-                </div>
-                <div class="for-button">
-                    <button class="add" id="add-btn">Add Book</button>
-                    <button class="exit" id="exit-add">Exit</button>
-                </div>
-            </section>
+                    </div>
+                    <div class="for-details">
+                        <label for="Book-details">Tell Something</label>
+                        <textarea name="text-area" id="Book-details" cols="30" rows="10"></textarea>
+                    </div>
+                    <div class="for-button">
+                        <button class="add" id="add-btn">Add Book</button>
+                        <button class="exit" id="exit-add">Exit</button>
+                    </div>
+                </section>
+            </div>
+            
         </div>  
    
     </body>
