No Change just spacing

--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
             <div class="reSection">
                 <section id="for-section">
                     <h2>Recommend a Book</h2>
-                    <div class="for-input-are">
+                    <div class="for-input-area">
                         <input id="bookname" type="text" placeholder="Name of Book">
                         <input id="authorname" type="text" placeholder="Name of Author">
                     </div>
