Delete unnecessary comment

--- a/Index.html
+++ b/Index.html
@@ -15,19 +15,7 @@
             </header>
             <main id="main-tag" class="change-main">
                 <button id="show-section">Add Book <i class="fa-solid fa-plus"></i></Button> 
-                <div class="Book-Container">
-                    <!-- <div class="card-holder">
-                        <h3>One Piece</h3>
-                        <p>Author: Eichiro Oda</p>
-                        <div class="forsypnosisonly">
-                            <p>A boy Who want to become Pirate king</p>
-                        </div>
-                        <div class="main-button">
-                            <button >View Sypnosis</button>
-                            <button>Delete</button>
-                        </div>
-                    </div> -->
-                </div>
+                <div class="Book-Container"></div>
             </main> 
             <div class="reSection">
                 <section id="for-section">
